------------------------------------------------------
Version 1.0.8
------------------------------------------------------

- Stopped modifying stacks on the network thread

------------------------------------------------------
Version 1.1.0
------------------------------------------------------

- Fixed config not saving when changed
- Added compatibility for Chisels and Bits
- Added support for off-hand xtone cycling
- Moved xtone enumeration to translation keys
- Removed base block from Chisel carving variations
- Added config for creative tab search bar
- Implemented server validation for xtone cycling
- Add config for xtone cycling tooltip visibility
- Allowed azur to be crafted with any blue dye