@@ -23,9 +23,11 @@ repositories {
 
 dependencies {
     implementation 'org.checkerframework:checker-qual:3.5.0'
+    // Full jar, we use internals (AbstractTexture, Quad)
+    deobfProvided 'team.chisel.ctm:CTM:MC1.12.2-1.0.2.31'
+    deobfProvided 'mezz.jei:jei_1.12.2:4.15.0.292:api'
     runtime 'team.chisel.ctm:CTM:MC1.12.2-1.0.2.31'
     runtime 'mezz.jei:jei_1.12.2:4.15.0.292'
-    //deobfCompile 'mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2'
 }
 
 minecraft {
