@@ -2,7 +2,7 @@ package info.tehnut.xtones.crafting;
 
 import com.google.gson.JsonObject;
 import info.tehnut.xtones.Xtones;
-import info.tehnut.xtones.config.XtonesConfig;
+import info.tehnut.xtones.XtonesConfig;
 import net.minecraftforge.common.crafting.IConditionFactory;
 import net.minecraftforge.common.crafting.JsonContext;
 
@@ -11,7 +11,7 @@ import java.util.function.BooleanSupplier;
 public final class XtoneCraftingCondition implements IConditionFactory {
     @Override
     public BooleanSupplier parse(final JsonContext context, final JsonObject json) {
-        return XtonesConfig::hasXtoneRecipes;
+        return () -> XtonesConfig.enableRecipes;
     }
 
     @Override
